--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1306,6 +1306,9 @@ video {
 .text-zinc-950\/40 {
   color: rgb(9 9 11 / 0.4);
 }
+.opacity-25 {
+  opacity: 0.25;
+}
 .opacity-60 {
   opacity: 0.6;
 }
@@ -1424,6 +1427,49 @@ body .background-layer::before {
     opacity: 0.3;
     mix-blend-mode: multiply;
   }
+body .word-container {
+    position: relative;
+  }
+body .content-overlay {
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+  }
+body .word-brick-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    grid-template-rows: repeat(5, 1fr);
+    grid-gap: 0.5rem;
+    align-content: end;
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+  }
+body .word-fall-animation {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    grid-column: span 1;
+    grid-row: span 1;
+    animation-fill-mode: forwards;
+    animation: wordFall 0.5s ease-in-out;
+  }
+body {
+
+  @keyframes wordFall {
+    0% {
+      transform: translateY(-100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  
+}
 body .nanakback{
     background-image: url('../../public/images/coinback.png');
   }
