--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -626,18 +626,11 @@ video {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
-.my-7 {
-  margin-top: 1.75rem;
-  margin-bottom: 1.75rem;
-}
 .mb-10 {
   margin-bottom: 2.5rem;
 }
 .mb-2 {
   margin-bottom: 0.5rem;
-}
-.mb-20 {
-  margin-bottom: 5rem;
 }
 .mb-3 {
   margin-bottom: 0.75rem;
@@ -699,6 +692,9 @@ video {
 .aspect-auto {
   aspect-ratio: auto;
 }
+.h-1\/4 {
+  height: 25%;
+}
 .h-10 {
   height: 2.5rem;
 }
@@ -725,6 +721,9 @@ video {
 }
 .h-5 {
   height: 1.25rem;
+}
+.h-5\/6 {
+  height: 83.333333%;
 }
 .h-6 {
   height: 1.5rem;
@@ -999,6 +998,10 @@ video {
 .border-sky-200 {
   --tw-border-opacity: 1;
   border-color: rgb(186 230 253 / var(--tw-border-opacity));
+}
+.border-sky-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(12 74 110 / var(--tw-border-opacity));
 }
 .bg-cyan-50 {
   --tw-bg-opacity: 1;
