--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.4.0 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.1 | MIT License | https://tailwindcss.com
 *//*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
@@ -563,6 +563,9 @@ video {
 .right-8 {
   right: 2rem;
 }
+.right-9 {
+  right: 2.25rem;
+}
 .top-0 {
   top: 0px;
 }
@@ -694,6 +697,9 @@ video {
 }
 .h-1\/2 {
   height: 50%;
+}
+.h-1\/4 {
+  height: 25%;
 }
 .h-10 {
   height: 2.5rem;
@@ -949,6 +955,9 @@ video {
 }
 .gap-6 {
   gap: 1.5rem;
+}
+.self-end {
+  align-self: flex-end;
 }
 .overflow-hidden {
   overflow: hidden;
