--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1487,9 +1487,6 @@ video {
 .bg-blend-soft-light {
   background-blend-mode: soft-light;
 }
-.mix-blend-multiply {
-  mix-blend-mode: multiply;
-}
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
@@ -1593,9 +1590,11 @@ body,
 * {
   font-family: 'Recoleta';
 }
+.header-bg{
+  background:rgb(244 250 255 / 81%);
+}
 .back-bg {
-  background: #bfdaeb;
-background: linear-gradient(0deg, rgba(190,217,235,1) 0%, rgba(200,224,240,1) 99%, rgba(68,71,70,1) 100%);
+  background: rgb(184 214 234);
 }
 .back-bg-image {
   background-image: url('../../public/images/background.png');
@@ -1735,7 +1734,6 @@ body .fs-rem-2 {
     font-size: 2rem;
   }
 body header .title {
-      font-size: 1.5rem;
       font-family: 'Recoleta' !important;
       color: #1f4860;
     }
@@ -1902,16 +1900,37 @@ body {
 }
 @media (min-width: 768px) {
 
+  .md\:block {
+    display: block;
+  }
+
+  .md\:h-12 {
+    height: 3rem;
+  }
+
   .md\:h-auto {
     height: auto;
+  }
+
+  .md\:w-12 {
+    width: 3rem;
   }
 
   .md\:w-20 {
     width: 5rem;
   }
 
+  .md\:gap-4 {
+    gap: 1rem;
+  }
+
   .md\:rounded-none {
     border-radius: 0px;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 @media (min-width: 1024px) {
@@ -1926,6 +1945,10 @@ body {
 
   .lg\:h-\[296px\] {
     height: 296px;
+  }
+
+  .lg\:w-2\/5 {
+    width: 40%;
   }
 
   .lg\:w-3\/12 {
