--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -733,9 +733,6 @@ video {
 .h-20 {
   height: 5rem;
 }
-.h-24 {
-  height: 6rem;
-}
 .h-3 {
   height: 0.75rem;
 }
@@ -747,9 +744,6 @@ video {
 }
 .h-5 {
   height: 1.25rem;
-}
-.h-5\/6 {
-  height: 83.333333%;
 }
 .h-6 {
   height: 1.5rem;
@@ -814,9 +808,6 @@ video {
 }
 .w-2\/4 {
   width: 50%;
-}
-.w-2\/5 {
-  width: 40%;
 }
 .w-24 {
   width: 6rem;
@@ -1233,9 +1224,6 @@ video {
 .p-12 {
   padding: 3rem;
 }
-.p-14 {
-  padding: 3.5rem;
-}
 .p-2 {
   padding: 0.5rem;
 }
@@ -1250,6 +1238,10 @@ video {
 }
 .p-8 {
   padding: 2rem;
+}
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -1590,8 +1582,15 @@ body,
 * {
   font-family: 'Recoleta';
 }
-.header-bg{
-  background:rgb(244 250 255 / 81%);
+.back-bg {
+  background: rgb(230, 242, 252);
+  background: linear-gradient(90deg, rgba(230, 242, 252, 1) 0%, rgba(159, 203, 227, 1) 0%);
+}
+.back-bg-image {
+  background-image: url('../../public/images/background.png');
+}
+.header-bg {
+  background: rgb(244 250 255 / 81%);
 }
 .back-bg {
   background: rgb(184 214 234);
@@ -1898,6 +1897,21 @@ body {
   --tw-text-opacity: 1;
   color: rgb(249 249 249 / var(--tw-text-opacity));
 }
+@media (min-width: 640px) {
+
+  .sm\:gap-4 {
+    gap: 1rem;
+  }
+
+  .sm\:p-1 {
+    padding: 0.25rem;
+  }
+
+  .sm\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+}
 @media (min-width: 768px) {
 
   .md\:block {
@@ -1908,16 +1922,8 @@ body {
     height: 3rem;
   }
 
-  .md\:h-auto {
-    height: auto;
-  }
-
   .md\:w-12 {
     width: 3rem;
-  }
-
-  .md\:w-20 {
-    width: 5rem;
   }
 
   .md\:gap-4 {
@@ -1935,8 +1941,8 @@ body {
 }
 @media (min-width: 1024px) {
 
-  .lg\:h-2\/5 {
-    height: 40%;
+  .lg\:h-3\/5 {
+    height: 60%;
   }
 
   .lg\:h-4\/5 {
@@ -1945,6 +1951,10 @@ body {
 
   .lg\:h-\[296px\] {
     height: 296px;
+  }
+
+  .lg\:h-full {
+    height: 100%;
   }
 
   .lg\:w-2\/5 {
@@ -1971,14 +1981,26 @@ body {
     justify-content: space-evenly;
   }
 
+  .lg\:overflow-hidden {
+    overflow: hidden;
+  }
+
   .lg\:text-left {
     text-align: left;
   }
 }
 @media (min-width: 1280px) {
 
+  .xl\:h-5\/6 {
+    height: 83.333333%;
+  }
+
   .xl\:w-1\/2 {
     width: 50%;
+  }
+
+  .xl\:w-1\/3 {
+    width: 33.333333%;
   }
 
   .xl\:w-1\/4 {
@@ -1989,6 +2011,14 @@ body {
     flex-direction: row;
   }
 
+  .xl\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .xl\:gap-0 {
+    gap: 0px;
+  }
+
   .xl\:text-left {
     text-align: left;
   }
@@ -1996,23 +2026,5 @@ body {
   .xl\:text-5xl {
     font-size: 3rem;
     line-height: 1;
-  }
-}
-@media (min-width: 1024px) {
-
-  .lg\:h-2\/5 {
-    height: 40%;
-  }
-
-  .lg\:h-4\/5 {
-    height: 80%;
-  }
-
-  .lg\:w-3\/12 {
-    width: 25%;
-  }
-
-  .lg\:flex-row {
-    flex-direction: row;
   }
 }
